# openapi-mcp

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
examples/petstore/: openapi.yaml
scripts/: README.md  ci_status.sh  wait_for_pipeline.sh  watch_ci.sh
src/openapi_mcp/: __init__.py  cli.py  client_generator.py  spec_processor.py
tests/integration/: test_cli.py
tests/unit/: test_client_generator.py  test_spec_processor.py
